syntax = "proto3";

package app;

option csharp_namespace = "App.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "Common/uuid.proto";

service ChatService {
    // Запрос требующий авторизации.
    // Производит подключение к чату по имени.
    // В случае если чат не существует, создает его.
    rpc Join(Chat) returns (stream JoinChatResponse);

    // Запрос требующий авторизации.
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Chat {
    string chat_name = 1;
    // Получить старые сообщения с определенной даты
    optional google.protobuf.Timestamp messages_since = 2;
}

message JoinChatResponse {
    string chat_name = 1;
    string creator_name = 2;
    google.protobuf.Timestamp created_time = 3;
    repeated MessageResponse messages = 4;
}

message MessageResponse {
    common.Uuid uid = 1;
    string chat_name = 2;
    Message message = 3;
    string sender_name = 4;
    google.protobuf.Timestamp message_send_time = 5;
}

message SendMessageRequest {
    common.Uuid uid = 1;
    string chat_name = 2;
    Message message_text = 3;
}

message Message {
    string message_text = 1;
}
